# glsl-parser

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
cmake/: glsl-parserConfig.cmake.in
executable/src/: main.cpp  old.cpp
tests/: do_statement.glsl  for_statement.glsl  if_statement.glsl  switch.glsl  uniforms.glsl
